--- a/css/style.css
+++ b/css/style.css
@@ -4,9 +4,10 @@
 
 /* scale all images, and media to accomodate responsive layout. */
 img, video, audio, iframe, table, form { 
-  width:100%; /* IE */
-  max-width: 100%; /* FF, Safari, Chrome */
-}
+  width:100%;  /* IE */ 
+/*  max-width: 100%; */ /* FF, Safari, Chrome */
+ } 
+
 
 /* prevent the verify image on contact page from stretching */
 img.verif_img {
@@ -257,11 +258,36 @@ a.gplus:active { background-position: -80px -80px; }
 section {
   padding: 20px;
   background: white;
+  margin: 4% 2%;
 }
 
 section a {
   color: #555;
   text-decoration: underline;
+}
+
+/** Columns **/
+
+.column {
+  width: 32%;
+  display: inline-block;
+}
+
+/* Tile Sizes */
+
+.small {
+  width: 100%;
+  height: 100%;
+}
+
+.med {
+  width: 197.5%;
+  height: 197.5%;
+}
+
+.large {
+  width: 300%;
+  height: 300%;
 }
 
 /********** Details **********/
